--- a/docs/packages/_packages.css
+++ b/docs/packages/_packages.css
@@ -3,7 +3,7 @@ main {
 }
 
 .background {
-    background: url("../images/Tony.jpg");
+    background: url("Tony.jpg");
     width: 100vw;
     height: 100vh;
     position: fixed;
