--- a/docs/packages/_packages.css
+++ b/docs/packages/_packages.css
@@ -3,12 +3,15 @@ main {
 }
 
 .background {
-    background: url ("https://misteryofdarkness.github.io/Avengers2019/images/Tony.jpg");
+    background: url("../images/Tony.jpg");
+
     width: 100vw;
     height: 100vh;
     position: fixed;
     z-index: -1;
+    
 }
+
 .down {
     margin-top: 120px;
 }
