--- a/docs/start-hosting/_start-hosting.css
+++ b/docs/start-hosting/_start-hosting.css
@@ -134,7 +134,7 @@ main {
     color: #ccc;
 }
   
-.background {
+.background1 {
     background: url("../images/mantis2.jpg");
     width: 100vw;
     height: 100vh;
