--- a/docs/start-hosting/_start-hosting.css
+++ b/docs/start-hosting/_start-hosting.css
@@ -135,7 +135,7 @@ main {
 }
   
 .background1 {
-    background: url("../images/mantis2.jpg");
+    background: url("images/mantis2.jpg");
     width: 100vw;
     height: 100vh;
     position: fixed;
