--- a/docs/customers/_customers.css
+++ b/docs/customers/_customers.css
@@ -5,7 +5,7 @@ main {
 }
 
 .background2 {
-  background: url("../images/throne.jpg");
+  background: url("https://misteryofdarkness.github.io/Avengers2019/images/throne.jpg");
   width: 100vw;
   height: 100vh;
   position: fixed;
