--- a/docs/packages/_packages.css
+++ b/docs/packages/_packages.css
@@ -3,7 +3,11 @@ main {
 }
 
 .background3 {
-    background: url("https://misteryofdarkness.github.io/Avengers2019/images/Tony.jpg");
+    background: url("https://misteryofdarkness.github.io/Avengers2019/images/Tony.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
     width: 100vw;
     height: 100vh;
     position: fixed;
