--- a/packages/_packages.css
+++ b/packages/_packages.css
@@ -33,17 +33,17 @@ main {
       padding: 32px;
   }
 
-.package__badge {
+  .package__badge {
     position: absolute;
-    top: 150px;
-    left: 800px;
-    margin: 20px;
-    font-size: 12px;
+    top: 17.5rem;
+    left: 50rem;
+    margin: 1.25rem;
+    font-size: 0.75rem;
     color: blue;
     background: #ff5454;
     padding: 8px;
-
-}
+  
+  }
 
 
   .package__subtitle {
