--- a/docs/start-hosting/_start-hosting.css
+++ b/docs/start-hosting/_start-hosting.css
@@ -127,7 +127,11 @@ main {
 }
   
 .background1 {
-    background: url("https://misteryofdarkness.github.io/Avengers2019/images/mantis2.jpg");
+    background: url("https://misteryofdarkness.github.io/forjupiter/images/Avengersnew.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
     width: 100vw;
     height: 100vh;
     position: fixed;
