--- a/docs/start-hosting/_start-hosting.css
+++ b/docs/start-hosting/_start-hosting.css
@@ -132,6 +132,7 @@ main {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-position: 0% -8%;
     width: 100vw;
     height: 100vh;
     position: fixed;
