--- a/docs/start-hosting/_start-hosting.css
+++ b/docs/start-hosting/_start-hosting.css
@@ -127,7 +127,7 @@ main {
 }
   
 .background1 {
-    background: url("https://misteryofdarkness.github.io/forjupiter/images/Avengersnew.jpg") no-repeat center center fixed; 
+    background: url("https://Rafal-Globetrotter.github.io/forjupiter/images/Avengersnew.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
