--- a/docs/customers/_customers.css
+++ b/docs/customers/_customers.css
@@ -5,7 +5,7 @@ main {
 }
 
 .background2 {
-  background: url("https://misteryofdarkness.github.io/Avengers2019/images/throne.jpg") no-repeat center center fixed; 
+  background: url("https://Rafal-Globetrotter.github.io/Avengers2019/images/throne.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
