--- a/start-hosting/_start-hosting.css
+++ b/start-hosting/_start-hosting.css
@@ -135,7 +135,7 @@ main {
 }
   
 .background {
-    background: url("../images/mantis2.jpg");
+    background: url("https://Rafal-Globetrotter.github.io/forjupiter/images/Avengersnew.jpg");
     width: 100vw;
     height: 100vh;
     position: fixed;
