--- a/customers/_customers.css
+++ b/customers/_customers.css
@@ -5,7 +5,7 @@ main {
 }
 
 .background {
-  background: url("https://Rafal-Globetrotter.github.io/Avengers2019/images/throne.jpg");
+  background: url("../images/throne.jpg") no-repeat center center fixed;
   width: 100vw;
   height: 100vh;
   position: fixed;
